--- a/qanda/qanda_app/templates/answer.html
+++ b/qanda/qanda_app/templates/answer.html
@@ -8,11 +8,15 @@
 
 		<div class="answerTextWrapper">
 	        {{ answer_form.text.errors }}
-	        <label for="id_text">Answer:</label> 
+	        <label for="id_text">
+	        	<h5>
+		        	Answer:
+		        </h5>
+	        </label> 
 	        {{ answer_form.text }}
 		</div>
 
-	<input type="submit" value="Submit" />
+	<input class="btn" type="submit" value="Submit" />
 	</form>
 </div>
 {% endblock %}
