bootstrapify subscription form

--- a/qanda/qanda_app/templates/subscription.html
+++ b/qanda/qanda_app/templates/subscription.html
@@ -9,7 +9,7 @@
 		<div class="subscriptionWrapper">
 	        <label for="id_subscribed">Subscribed:
 			<input {% if checked == 'True' %} checked {% endif %} type="checkbox" name="subscribed" id="id_subscribed">	
-			<input type="submit" value="Submit">
+			<input class="btn" type="submit" value="Submit">
 			</label>
 		</div>	
 	</form>
