--- a/qanda/qanda_app/templates/reply.html
+++ b/qanda/qanda_app/templates/reply.html
@@ -1,6 +1,6 @@
 {% block answer %}
 
-<div class="span6">
+<div class="row">
 	<form method="post" action="{{ action_link }}">
 		{% csrf_token %}
 		{{ reply_form.non_field_errors }}
@@ -9,10 +9,14 @@
 		<input type="hidden" name="type" value="{{ type }}">	
 		<div class="replyTextWrapper">
 	        {{ reply_form.text.errors }}
-	        <label for="id_text">Reply:</label> <br />
+	        <label for="id_text">
+	        	<h5>
+	        		Reply:
+	        	</h5>
+	        </label>
 	        {{ reply_form.text }}
 		</div>	
-		<input type="submit" value="Submit">
+		<input class="btn" type="submit" value="Submit">
 	</form>
 </div>
 {% endblock %}
