--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -114,7 +114,7 @@
 			<div class="row">
 				<h3> Answer this question </h3>
 
-				{% include "answer.html" with type="new_answer" action_link="relate/" %}
+				{% include "new_answer.html" with type="new_answer" action_link="relate/" %}
 			</div>
 		</div>
 
