get rid of the unified relations form and replace with buttons

--- a/qanda/qanda_app/static/qanda/qanda.css
+++ b/qanda/qanda_app/static/qanda/qanda.css
@@ -122,3 +122,19 @@
 .tag-list-used {
 	font-size: 10;
 }
+
+.question-useful {
+	display: none;
+}
+
+.question:hover .question-useful {
+	display: block;
+}
+
+.answer-useful {
+	display: none;
+}
+.answer:hover .answer-useful {
+		display: block;
+	}
+}
