--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -13,48 +13,73 @@
 	{{ debug }}
 	<div class="row">
 		<div class="span10">
-			<div class="row">
-				<div class="pull-left">
-					<a class="btn {% if upvoted %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;Up&nbsp;&nbsp;&nbsp;</a><br/>
-					<a class="btn {% if downvoted %} active {% endif %}"><i class="icon-arrow-down"></i>Down</a>
+			<div class="question">
+				<div class="row">
+					<div class="pull-left">
+						<a href="relate_single/upvote/{% if upvote %}false{%else%}true{% endif %}" class="btn {% if upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;Up&nbsp;&nbsp;&nbsp;</a>
+						<br/>
+						<h4 class="text-center">
+							#vote
+						</h4>
+						<a href="relate_single/downvote/{% if downvote %}false{%else%}true{% endif %}" class="btn {% if downvote %} active {% endif %}"><i class="icon-arrow-down"></i>Down</a>
+					</div>
+					<div class="span8">
+						<h2> {{ question.title }} - {{ question.viewCount }} </h2> 
+					</div>
 				</div>
-				<div class="span9">
-					<h2> {{ question.title }} - {{ question.viewCount }} </h2> 
+				<div class="row">
+					<p></p>
 				</div>
-			</div>
-			<div class="row">
-				<p></p>
-			</div>
-			<div class="row">
-				<div class="span6">
-					by <i>{{ question.author }}</i> <br />
-					submitted {{ question.postDate }} <br />
+				<div class="row">
+					<div class="span6">
+						by <i>{{ question.author }}</i> <br />
+						submitted {{ question.postDate }} <br />
+					</div>
+					<div class="span3">
+						{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" subscribed=question.subscribed %}
+					</div>
 				</div>
-				<div class="span3">
-					{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" checked=question.subscribed %}
+				<div class="row">
+					<p></p>
 				</div>
-			</div>
-			<div class="row">
-				<p></p>
-			</div>
-			<div class="row">
-				<div class="span8">
-					<blockquote>
-					{{ question.text }}  
-					</blockquote>
+				<div class="row">
+					<div class="span8">
+						<blockquote>
+						{{ question.text }}  
+						</blockquote>
+					</div>
+					<!-- <div class="span2">
+						{% include "relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
+					</div> -->
+					<div class="span2">
+						<a href="relate_single/star/{% if star %}false{%else%}true{% endif %}" class="btn {% if star %} active {% endif %}">
+							<i class="icon-star"></i> Star
+						</a>
+						<br/>
+						<br/>
+						<a href="relate_single/flag/{% if flag %}false{%else%}true{% endif %}" class="btn {% if flag %} active {% endif %}">
+							<i class="icon-flag"></i> Flag
+						</a>
+					</div>
 				</div>
-				<div class="span2">
-					{% include "relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
+				<div class="row">
+					<div class="span8">
+						<ul>
+							Tags:
+							{% for tag in question.tags.all %}
+								<a href="{% url qanda_app.views.tag_page tag=tag.name page="0" %}">{{ tag.name }},</a>
+							{% endfor %}
+						</ul>	
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="span8">
-					<ul>
-						Tags:
-						{% for tag in question.tags.all %}
-							<a href="{% url qanda_app.views.tag_page tag=tag.name page="0" %}">{{ tag.name }},</a>
-						{% endfor %}
-					</ul>	
+				<div class="row">
+					<div class="span8 question-useful">
+						<h6>
+							Have you found this question useful?
+							<a href="relate_single/useful/{% if useful %}false{%else%}true{% endif %}" class="btn {% if useful %} active {% endif %}">Yes</a>
+							<a href="relate_single/notUseful/{% if notUseful %}false{%else%}true{% endif %}" class="btn {% if notUseful %} active {% endif %}">No</a>
+						</h6>
+					</div>
 				</div>
 			</div>
 
@@ -66,14 +91,32 @@
 			<hr>
 
 			{% for answer in answers %}
-			<div class ="row">
-				<div class="span8">
+			<div class ="row answer">
+				<div class="span9">
 				<p>
 					<div class="row">
-						<div class="span7 offset1">
+						<div class="pull-left">
+							<a href="{{ answer.pk }}/upvote/{% if answer.relations.upvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;Up&nbsp;&nbsp;&nbsp;</a>
+							<br/>
+							<h4 class="text-center">
+								#vote
+							</h4>
+							<a href="{{ answer.pk }}/downvote/{% if answer.relations.downvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.downvote %} active {% endif %}"><i class="icon-arrow-down"></i>Down</a>
+						</div>
+						<div class="span7">
 							<blockquote>
 								{{ answer.text }} 
 							</blockquote>
+						</div>
+						<div class="pull-right">
+							<a href="{{ answer.pk }}/star/{% if answer.relations.star %}false{%else%}true{% endif %}" class="btn {% if answer.relations.star %} active {% endif %}">
+								<i class="icon-star"></i> Star
+							</a>
+							<br/>
+							<br/>
+							<a href="{{ answer.pk }}/flag/{% if answer.relations.flag %}false{%else%}true{% endif %}" class="btn {% if answer.relations.flag %} active {% endif %}">
+								<i class="icon-flag"></i> Flag
+							</a>
 						</div>
 						<!-- <div class="span1">
 							{% include "relations.html" with relations=answer.relations pk=answer.pk type="answer" action_link="relate/" %} <br />
@@ -84,7 +127,16 @@
 							by <i>{{ answer.author }}</i>
 						</div>
 						<div class="span1">
-							{% include "subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" checked=answer.subscribed %}
+							{% include "subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" subscribed=answer.subscribed %}
+						</div>
+					</div>
+					<div class="row answer-useful">
+						<div class="span5 offset1">
+							<h6>
+								Have you found this answer useful?
+								<a href="{{ answer.pk }}/useful/{% if answer.relations.useful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.useful %} active {% endif %}">Yes</a>
+								<a href="{{ answer.pk }}/notUseful/{% if answer.relations.notUseful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.notUseful %} active {% endif %}">No</a>
+							</h6>
 						</div>
 					</div>
 					
