--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -154,8 +154,14 @@
 					<div class="row">
 						<p></p>
 					</div>
-					<div class="span6 offset2">
-						{% include "reply.html" with pk=answer.pk type="new_reply" action_link="relate/" %}
+					<div class="row reply-box">
+						<div class="span5 offset2">
+							{% if user.is_authenticated %}
+								{% include "reply.html" with pk=answer.pk type="new_reply" action_link="relate/" %}
+							{% else %}
+								<a href="{% url qanda_app.views.index_with_login %}">Login to reply</a>
+							{% endif %}
+						</div>
 					</div>
 					<hr>
 				</p>
