--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -57,7 +57,10 @@
 					</div> -->
 					<div class="span2">
 						<a href="relate_single/star/{% if question.relations.star %}false{%else%}true{% endif %}" class="btn {% if question.relations.star %} active {% endif %}">
-							<i class="icon-star"></i> Star
+							{% if question.relations.star %}
+								<i class="icon-star"></i> Starred
+							{% else %}									<i class="icon-star-empty"></i> Star
+							{% endif %}
 						</a>
 						<br/>
 						<br/>
