--- a/qanda/qanda_app/templates/qanda_base.html
+++ b/qanda/qanda_app/templates/qanda_base.html
@@ -29,8 +29,7 @@
     </div>
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="{{ STATIC_URL }}qanda/qanda.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script><!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+    
 </body>
 </html>
