--- a/qanda/qanda_app/templates/qanda_base.html
+++ b/qanda/qanda_app/templates/qanda_base.html
@@ -1,9 +1,6 @@
 <html>
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
 
-    {% block head %}
-    {% endblock %}
-	
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
@@ -13,7 +10,14 @@
       }
     </style>
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}qanda/qanda.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}qanda/css/qanda.css" rel="stylesheet">
+    <link rel="icon" 
+          type="image/png" 
+          href="{{ STATIC_URL }}qanda/img/tree.png">
+          
+    {% block head %}
+    {% endblock %}
+	
 </head>
 <body>
     
@@ -28,7 +32,7 @@
 
     </div>
 	<script src="http://code.jquery.com/jquery.js"></script>
-    <script src="{{ STATIC_URL }}qanda/qanda.js"></script>
+    <script src="{{ STATIC_URL }}qanda/js/qanda.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
     
 </body>
