--- a/qanda/qanda_app/templates/navbar.html
+++ b/qanda/qanda_app/templates/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="brand" href="{% url qanda_app.views.index %}">Qanda</a>
+      <a class="brand" href="{{ ROOT_URL }}">{{ SITE_NAME }}</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li {% if view == "question_list" %} class="active" {% endif %} ><a href="{% url qanda_app.views.index %}">Home</a></li>
