--- a/qanda/qanda_app/templates/question_list.html
+++ b/qanda/qanda_app/templates/question_list.html
@@ -13,6 +13,28 @@
 			Recent Questions
 		</h2>
 
+		<div>
+			<div class="btn-group">
+				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+					Category Filter
+					<span class="caret"></span>
+				</a>
+				<ul class="dropdown-menu">
+					<li>
+						<a href="{% url qanda_app.views.question_list question_id='0' %}">All</a>
+					</li>
+					{% for category in categories %}
+						<li>
+							<a href="{% url qanda_app.views.categorized_question_list category=category.name question_id='0' %}">{{ category.name }}</a>
+						</li>
+					{% endfor %}
+				</ul>
+		</div>
+
+		<div class="row">
+			<p></p>
+		</div>
+
 		{% include "question_listing_base.html" %}
 
 		{% include "righthand_tags.html" %}
