--- a/qanda/qanda_app/templates/navbar.html
+++ b/qanda/qanda_app/templates/navbar.html
@@ -16,6 +16,11 @@
           <li {% if view == "tag_list" %} class="active" {% endif %} ><a href="{% url qanda_app.views.tag_list page="0" %}">Tags</a></li>
           <li {% if view == "category_list" %} class="active" {% endif %} ><a href="{% url qanda_app.views.category_list page="0" %}">Categories</a></li>
           <li {% if view == "new_question_page" %} class="active" {% endif %} ><a href="{% url qanda_app.views.new_question_page %}">New Question</a></li>
+          {% if request.user.is_authenticated %}
+          <li {% if view == "profile" %} class="active" {% endif %} ><a href="#">Profile</a></li>
+          {% else %}
+          <li {% if view == "login" %} class="active" {% endif %} ><a href="{{ LOGIN_URL }}">Login</a></li>
+          {% endif %}
         </ul>
 
         <!-- Search Form -->
