change the grammar in cateogry list

--- a/qanda/qanda_app/templates/category_list.html
+++ b/qanda/qanda_app/templates/category_list.html
@@ -25,7 +25,7 @@
 										"{{ category }}"
 									</a>
 									<span class="tag-list-used">
-									  - used {{ category.count }} time{{ category.count|pluralize }}
+									  - has {{ category.count }} question{{ category.count|pluralize }}
 									</span>
 								</div>	
 					{% endfor %}
