--- a/qanda/qanda_app/templates/profile.html
+++ b/qanda/qanda_app/templates/profile.html
@@ -8,14 +8,31 @@
 
 	{% block profile %}
 
-		<div class="row">
-			<div class="span6">
+	<div class="row">
+		<div class="span10">
+			<h2>
+				Profile Page for "{{ qandaUser.djangoUser }}"
+			</h2>
 
+			<div class="span9">
+				<div class="row">
+					#questions : {{ qandaUser.questions.count }}
+				</div>
+				<div class="row">
+					#answers : {{ qandaUser.answers.count }}
+				</div>
+				<div class="row">
+					#replies : {{ qandaUser.replies.count }}
+				</div>
+				<div class="row">
+					#and_so_on : {{ qandaUser.pk }}
+				</div>
 			</div>
-
-			{% include "righthand_tags.html" %}
-			
 		</div>
+
+		{% include "righthand_tags.html" %}
+		
+	</div>
 
 	{% endblock %}
 
