--- a/qanda/qanda_app/templates/qanda_base.html
+++ b/qanda/qanda_app/templates/qanda_base.html
@@ -31,7 +31,7 @@
     	{% endblock %}
 
     </div>
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="{{ STATIC_URL }}/jquery/jquery-1.9.1.js"></script>
     <script src="{{ STATIC_URL }}qanda/js/qanda.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
     
